--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <title>Curso React TS - Cadastro</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+  </style>
 </head>
 
 <body>
   <div id="root"></div>
+  <noscript>Você precisa de javascript para rodar a aplicação</noscript>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
